# novaboot

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  cert.pem  docker-compose.yml  implementation_plan.md  key.pem  options  plan  plan.md  test_reg.cpp
bench/: CMakeLists.txt  bench_database_batch.cpp  bench_router.cpp
cmake/: ComponentScan.cmake  Dependencies.cmake  OdbGenerate.cmake  odb_bridge.py
docs/: compatibility.md  examples.md  http-client.md  jpa-compatibility.md  migrations.md  openapi.md  operations.md  orm-cascade-contract.md  realtime.md  relationship-modeling.md  repository-pagination-sort.md  responses.md  security.md  shutdown.md  sse.md  static-resources.md  testing.md  uploads.md
examples/: CMakeLists.txt  hello_world.cpp  hello_world_components.h
examples/client/: CMakeLists.txt
examples/client/src/: main.cpp
examples/client/src/client/: user_service_client.h
examples/client/src/controller/: gateway_user_controller.h
examples/client/src/model/: user.h
examples/client/src/resources/: config.toml
examples/client/src/service/: user_service_client_provider.h
examples/knowledge_hub/: CMakeLists.txt
examples/knowledge_hub/src/: main.cpp
examples/knowledge_hub/src/config/: web_config.h
examples/knowledge_hub/src/controller/: global_exception_handler.h  knowledge_controller.h
examples/knowledge_hub/src/model/: dto.h  entities.h
examples/knowledge_hub/src/repository/: article_repository.h  contributor_repository.h  project_repository.h
examples/knowledge_hub/src/resources/: config.toml
examples/knowledge_hub/src/resources/static/: index.html
examples/knowledge_hub/src/service/: knowledge_service.h
examples/server/: CMakeLists.txt
examples/server/src/: main.cpp
examples/server/src/controller/: global_exception_handler.h  user_controller.h
examples/server/src/middleware/: request_id_middleware.cpp  request_id_middleware.h
examples/server/src/model/: user.h
examples/server/src/repository/: user_repository.h
examples/server/src/resources/: config.toml
examples/server/src/service/: request_logger.h  user_service.h
examples/src/: client_demo.cpp  main.cpp
examples/src/client/: user_service_client.h
examples/src/controller/: user_controller.h
examples/src/exception/: user_not_found_exception.h
examples/src/model/: user.h
examples/src/repository/: user_repository.h
examples/src/resources/: config.toml
examples/src/resources/static/: index.html
examples/src/service/: user_service.h
examples/todo_notes/: CMakeLists.txt
examples/todo_notes/src/: main.cpp
examples/todo_notes/src/config/: web_config.h
examples/todo_notes/src/controller/: auth_controller.h  global_exception_handler.h  note_controller.h  todo_controller.h
examples/todo_notes/src/model/: app_user.h  dto.h  note.h  todo.h
examples/todo_notes/src/repository/: app_user_repository.h  note_repository.h  todo_repository.h
examples/todo_notes/src/resources/: config.toml
examples/todo_notes/src/resources/static/: index.html
examples/todo_notes/src/service/: auth_service.h  note_service.h  todo_service.h
examples/websocket_chat/: CMakeLists.txt
examples/websocket_chat/src/: main.cpp
examples/websocket_chat/src/resources/static/: index.html  stomp.html
include/novaboot/: novaboot.h
include/novaboot/actuator/: actuator.h
include/novaboot/annotations/: annotations.h  lifecycle.h  mapping.h  scanner.h  stereotypes.h
include/novaboot/async/: cancellation.h  task.h
scripts/: test_middlewares_curl.sh
src/actuator/: actuator.cpp
src/client/: rest_client.cpp
src/config/: app_config.cpp
src/context/: request_context.cpp
src/core/: epoll_event_loop.cpp  io_uring_event_loop.cpp  server.cpp  shard.cpp  shutdown.cpp
src/di/: container.cpp  lifecycle.cpp
src/http/: multipart.cpp  static_resource.cpp
src/http1/: http1_session.cpp
src/http2/: http2_session.cpp
src/http3/: header_map.cpp  http3_client_session.cpp  http3_session.cpp  http3_stream.cpp  request.cpp  response.cpp
src/memory/: arena_allocator.cpp  pool_allocator.cpp
src/messaging/: stomp.cpp
src/middleware/: authorization_middleware.cpp  body_size_limit_middleware.cpp  compression_middleware.cpp  concurrency_limit_middleware.cpp  content_negotiation_middleware.cpp  cors_middleware.cpp  csrf_middleware.cpp  declarative_authorization.cpp  jwt_middleware.cpp  pipeline.cpp  rate_limit_middleware.cpp  request_id_middleware.cpp  request_logging_middleware.cpp  security_headers_middleware.cpp  session_middleware.cpp  trusted_forwarded_headers_middleware.cpp
src/net/: address.cpp  tcp_connection_manager.cpp  tcp_listener.cpp  tls_tcp_stream.cpp  udp_socket.cpp
src/observability/: http_observation_middleware.cpp  observation.cpp  trace_context.cpp
src/quic/: connection_manager.cpp  quic_client_connection.cpp  quic_connection.cpp  tls_context.cpp  tls_session.cpp
src/router/: router.cpp
src/tools/: di_scanner.cpp
src/websocket/: websocket.cpp
tests/: CMakeLists.txt
tests/integration/: test_server_basic.cpp
tests/support/: postgres_test_database.h
tests/unit/: db_user.h  test_actuator.cpp  test_annotations.cpp  test_app_config.cpp  test_app_test_client.cpp  test_arena_allocator.cpp  test_async_task.cpp  test_authorization_middleware.cpp  test_auto_middleware.cpp  test_auto_routing.cpp  test_caching_crud.cpp  test_client_protocols.cpp  test_concurrency_limit_middleware.cpp  test_connection_pool.cpp  test_content_negotiation.cpp  test_controller_advice.cpp  test_cookie.cpp  test_csrf_middleware.cpp  test_database_batch.cpp  test_database_crud.cpp  test_database_observability.cpp  test_di_async.cpp  test_di_config_bean.cpp  test_di_cycle_detection.cpp  test_di_handler_injection.cpp  test_di_lifecycle.cpp  test_di_prototype.cpp  test_di_qualifiers.cpp  test_di_scopes.cpp  test_di_singleton.cpp  test_di_value.cpp  test_error_response.cpp  test_exception_handler.cpp  test_header_map.cpp  test_http_drain_gate.cpp  test_jpa_annotations.cpp  test_json_reflection.cpp  test_jwt_middleware.cpp  test_live_server.cpp  test_live_websocket.cpp  (+29 more)
(+117 files in other folders)
